# ttvoice-mod

./: .gitignore  LICENSE-EX  README.md  TODO.md  build.gradle  build.gradle.kts  gradle.properties  libs.versions.toml  settings.gradle.kts  stonecutter.gradle.kts
.github/workflows/: build.yml
changelogs/: 1.0.0-beta1.md  1.0.0-beta2.md  1.0.0-beta3.md  1.0.0-beta4.md  1.0.0-beta5.md  1.0.0-beta7.md  1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md
src/client/java/com/flooferland/ttvoice/accessors/: FiguraEventsAPIAccess.java
src/client/java/com/flooferland/ttvoice/mixin/: FiguraAPIManagerMixin.java  FiguraDocsManagerMixin.java  FiguraEventsAPIMixin.java  FiguraGlobalDocsMixin.java  SVCSpeakingVisualMixin.java
src/client/kotlin/com/flooferland/espeak/: Espeak.kt  EspeakLibNative.kt  README.md
src/client/kotlin/com/flooferland/ttvoice/: ModMenuEntry.kt  TextToVoiceClient.kt  VcPlugin.kt
src/client/resources/: fabric.mod.json  ttvoice.mixins.json
src/client/resources/assets/ttvoice/: tts.py
src/client/resources/assets/ttvoice/lang/: en_us.json
src/client/resources/assets/ttvoice/native/: LICENSE.txt
src/client/resources/assets/ttvoice/python/: requirements.txt  tts.py
src/client/resources/assets/ttvoice/textures/: icon.aseprite
src/client/resources/native/: .gitignore
src/native/: Cargo.toml
src/native/src/: lib.rs
src/test/kotlin/com/flooferland/espeak/: EspeakLibTest.kt
versions/1.20.1/: gradle.properties
versions/1.20.4/: gradle.properties
versions/1.21.1/: gradle.properties
versions/1.21.9/: gradle.properties
(+38 files in other folders)
